# footboi

./: LICENSE  README.md  example.toml  pyproject.toml
src/footboi/: __init__.py  adapter.py  common.py  config.py  storage.py  webhook.py
src/footboi/adapters/: fints_sync.py
